partial rework configuration